--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/android-support-v4.jar')
+    compile 'com.android.support:support-v4:20.0.0'
+}
+
+configurations {
+    all*.exclude group: 'com.android.support', module: 'support-v4'
 }
