--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('libs/android-support-v4.jar')
     compile 'com.android.support:support-v4:20.0.0'
+    compile files('libs/universal-image-loader-1.9.3.jar')
 }
 
 configurations {
