--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile files('libs/android-support-v4.jar')
     compile 'com.android.support:support-v4:20.0.0'
     compile files('libs/universal-image-loader-1.9.3.jar')
+    compile files('libs/nineoldandroids-2.4.0.jar')
+    compile files('libs/listviewanimations_lib-core_3.1.0.jar')
 }
 
 configurations {
